# Ra-stage

./: .gitignore  ANDROID_SETUP_GUIDE.md  AR_IMPLEMENTATION_SUMMARY.md  AR_PANORAMA_SETUP.md  BACKEND-SUMMARY.md  CREATIVE_BACKGROUND_UPDATE.md  DATABASE_SETUP_GUIDE.md  GOOGLE_MAPS_SETUP.md  INTERACTIVE_MAP_IMPLEMENTATION.md  MAPSCREEN_ENHANCEMENTS.md  PNG_UPDATE_SUMMARY.md  POSTGRESQL_SETUP_GUIDE.md  PROJECT_PROGRESS_RESUME.md  README.md  REALTIME_FEATURES.md  SETUP_GUIDE.md  STREET_VIEW_IMPLEMENTATION.md  TRAINSIGHT-IMPROVEMENTS.md  analysis_options.yaml  create-database.js  create-env.js  db.js  env.example  index.js  init-db.js  package-lock.json  package.json  postman-tests.md  pubspec.yaml  realtime-service.js  setup.js  setup_android.bat  test-db-connection.js  test-server.js
android/: build.gradle  local.properties
android/app/: build.gradle
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ios/Runner/: AppDelegate.swift  GeneratedPluginRegistrant.m  Info.plist
lib/: main.dart
lib/constants/: app_colors.dart  app_themes.dart
lib/models/: gare.dart
lib/screens/: ar_screen.dart  dashboard_screen.dart  home_screen.dart  interactive_map_screen.dart  map_screen.dart  outside_station_street_view_page.dart  splash_screen.dart  test_street_view_page.dart
lib/services/: api_service.dart
routes/: gares.js  realtime.js
test/: widget_test.dart
web/: index.html
windows/: CMakeLists.txt
windows/flutter/ephemeral/: generated_config.cmake
windows/runner/: CMakeLists.txt  flutter_window.cpp  flutter_window.h  main.cpp
(+8 files in other folders)
